--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/new.js && node ./src/chatbot-server.js"
+    "start": "node ./src/new.js & node ./src/chatbot-server.js"
+    
   },
   "keywords": [],
   "author": "",
